--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -2,24 +2,23 @@
     <ion-content>
         <form name="addMediForm" ng-submit="addMedi(medi)" novalidate>
             <div class="list list">
-
                 <label class="item item-input">
                     <input type="text" ng-model='medi.name' placeholder="Name" name="mediname" required autofocus>
                     <!-- wenn vorgabe wert erwünscht: ng-init="medi.name='Aspirin'" -->
                 </label>
                 <div class="row">
                     <div class="col">
-                <label class="item item-input item-stacked-label">
-                <span class="input-label">Menge</span>
-                    <input type="number" ng-model='medi.menge' min="0" max="10000" placeholder="z.B. 250" name="medimenge">
-                </label>
-                </div>
-                <div class="col">
-                <label class="item item-input item-stacked-label">
-                <span class="input-label">Einheit</span>
-                    <input type="text" ng-model='medi.einheit' placeholder="z.B. mg" name="medieinheit">
-                </label>
-                </div>
+                        <label class="item item-input item-stacked-label">
+                            <span class="input-label">Menge</span>
+                            <input type="number" ng-model='medi.menge' min="0" max="10000" placeholder="z.B. 250" name="medimenge">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label class="item item-input item-stacked-label">
+                            <span class="input-label">Einheit</span>
+                            <input type="text" ng-model='medi.einheit' placeholder="z.B. mg" name="medieinheit">
+                        </label>
+                    </div>
                 </div>
                 <label class="item item-input">
                     <input type="text" ng-model='medi.anwendungsform' placeholder="Anwendungsform z.B. Tabletten" name="medianwendungsform">
@@ -29,7 +28,7 @@
                 </label>
                 <!-- Rezept Funktion -->
                 <!-- ******************************************************* -->
-<!--                 <div class="item item-toggle">
+                <!--                 <div class="item item-toggle">
                     Medikament Rezeptfplichtig
                     <label class="toggle toggle-assertive">
                         <input type="checkbox" ng-model='medi.rezeptpflichtig'>
@@ -102,12 +101,14 @@
                 <div class="item item-divider">
                     Zeiten
                 </div>
-                    <ul class="list">
-                        <li ng-repeat="zeit in medi.timers.zeiten" class="item">{{zeit}}</li>
-                    </ul>
+                <ul class="list">
+                    <li ng-repeat="zeit in medi.timers.zeiten" class="item">{{zeit}}</li>
+                </ul>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Zeiten auswählen:
+                        Zeiten auswählen
+                        <!-- abstand -->
+                        <p>&nbsp;</p>
                     </div>
                     <select ng-model="medi.timers.zeiten" multiple ng-options="zeit as zeit for zeit in zeiten" required name="meditimerszeiten">
                         <!-- <select ng-model="timers.zeiten" multiple ng-options="zeit.zeitE as zeit.zeitD for zeit in zeiten "> -->
@@ -118,8 +119,9 @@
                    <input type="time" min="00.00" max="23:30" step="1800" ng-model="medi.timers.zeiten"> 
                 </label> -->
                 <!-- <pre>Meine Zeiten = {{medi.timers.zeiten}}</pre> -->
-<!--                 <tt>Tage = {{medi.timers.tage}}</tt>
- -->                <br/>
+                <!--                 <tt>Tage = {{medi.timers.tage}}</tt>
+ -->
+                <br/>
                 <label class="item item-input">
                     <input type="number" ng-model="medi.timers.menge" min="0" max="10" placeholder="Menge (z.B. 0,5)">
                 </label>
@@ -131,7 +133,7 @@
                 </button>
             </div>
         </form>
-<!--         <pre>Medi = {{medi | json}}</pre>
- -->    </ion-content>
+        <!--         <pre>Medi = {{medi | json}}</pre>
+ --></ion-content>
 </ion-view>
 <!-- <input type="checkbox" ng-model="timers.tage[tag.tagE]" ng-checked="true"> -->
