--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -1,18 +1,9 @@
-<ion-view view-title="Medi-Liste">
+<ion-view view-title="Medikamenten Liste">
     <ion-content>
-            <!-- <button class="button icon ion-plus-circled" ng-click="goAddMedi()"> -->
-            <!-- ng-click="go('app.medis')" -->
-             <!-- ng-click="$state.go('app.medis')" -->
-             <!-- ng-click="go('/app/addMedi')" -->
-                <!-- Medikament hinzufügen -->
-            <!-- </button> -->
         <ion-list>
             <ion-item ng-repeat="medi in medis" href="#/app/medis/{{medi.id}}">
                 {{medi.name}}
             </ion-item>
         </ion-list>
-<!--         <h3>Local Notification Test</h3>
- --><!--         <button class="button" ng-click="add()">Add notification</button>
-    <button class="button" ng-click="isScheduled()">Is Scheduled</button> -->
     </ion-content>
 </ion-view>
