--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -6,12 +6,15 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
+      <!-- hamburger -->
+      <ion-nav-buttons side="left larger">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <!-- "button-large" bringt nix-->
         </button>
       </ion-nav-buttons>
+
       <ion-nav-buttons side="right">
-<button class="button icon ion-plus-circled" ng-click="goAddMedi()"></button>
+<button class="button icon ion-plus" ng-click="goAddMedi()"></button>
 <!-- <button class="button icon ion-ios-refresh-empty" ng-click="reload()"></button> -->
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -20,17 +23,18 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+    <ion-header-bar class="bar-assertive">
+      <h1 class="title">Menue</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/medis">
-          Medi-Liste
+          Medikamenten Liste
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/addMedi">
-          Medi hinzufügen
-        </ion-item><ion-item nav-clear menu-close href="#/app/notifications">
+          Medikament hinzufügen
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/notifications">
           Benachrichtigungen
         </ion-item>
       </ion-list>
