--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -1,5 +1,8 @@
-<ion-view view-title="Medikamenten Liste">
+<ion-view view-title="Medi-Timer">
     <ion-content>
+        <div class="bar bar-header bar-energized">
+            <h1 class="title">Medikamenten Liste</h1>
+        </div>
         <ion-list>
             <ion-item ng-repeat="medi in medis" href="#/app/medis/{{medi.id}}">
                 {{medi.name}}
