cover und navigation

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -2,9 +2,17 @@
 //mk styles
 //--------------------------------------------------
 
+//diverses
+//****************************************************
+.cover {
+	background: #886aea !important;
+	padding: 40px;
+}
+
+
 // //fonts
 //****************************************************
-$font-size-base:                  18px !default;
+$font-size-base:                  20px !default;
 // $font-size-base:                  14px !default;
 $font-size-large:                 22px !default;
 // $font-size-large:                 18px !default;
