--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -1,5 +1,29 @@
-<ion-view view-title="Medi-Timer">
-    <ion-content>
-<h1>Cover</h1>
+<ion-view hide-nav-bar="true">
+    <!-- Navbar wird nicht angezeigt -->
+    <ion-content class="cover">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col col-10"></div>
+            <div class="col">
+                <h1 class="">medi</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-10"></div>
+            <div class="col">
+                <h1 class="">timer</h1>
+            </div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col">
+                <a ng-click="goAddMedi()" class="button icon-right ion-chevron-right button-dark">Medis hinzufügen</a>
+            </div>
+        </div>
+                <div class="row">
+            <div class="col">
+                <a ng-click="goMedis()" class="button icon-right ion-chevron-right button-dark">Medi Liste</a>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
