--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -1,9 +1,14 @@
 <ion-view view-title="Medi-Timer">
-    <ion-content>
-        <div class="bar bar-header bar-energized">
-            <h1 class="title">Medikamenten Liste</h1>
+    <ion-header-bar align-title="left" class="bar-subheader bar-energized">
+        <h1 class="title">Medikamenten Liste</h1>
+        <div class="button">
+            <button class="button icon ion-plus" ng-click="goAddMedi()"></button>
         </div>
+    </ion-header-bar>
+    <ion-content>
         <ion-list>
+        <!-- abstand gewinnen zur bar -->
+        <!-- <ion-item><h3>&nbsp;</h3></ion-item> -->
             <ion-item ng-repeat="medi in medis" href="#/app/medis/{{medi.id}}">
                 {{medi.name}}
             </ion-item>
