--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -17,7 +17,7 @@
         <div class="row">&nbsp;</div>
         <div class="row">
             <div class="col">
-                <a ng-click="goAddMedi()" class="button icon-right ion-chevron-right button-dark">Medis hinzufügen</a>
+                <a ng-click="goAddMedis()" class="button icon-right ion-chevron-right button-dark">Medis hinzufügen</a>
             </div>
         </div>
                 <div class="row">
