CoverPage und Splashscreen

--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -1,9 +1,7 @@
 <ion-view view-title="Medi-Timer">
     <ion-header-bar align-title="left" class="bar-subheader bar-energized">
         <h1 class="title">Medikamenten Liste</h1>
-        <div class="button">
-            <button class="button icon ion-plus" ng-click="goAddMedi()"></button>
-        </div>
+            <a class="button icon ion-plus" ng-click="goAddMedi()"></a>
     </ion-header-bar>
     <ion-content>
         <ion-list>
