--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -5,24 +5,15 @@
         <div class="row">
             <div class="col col-10"></div>
             <div class="col">
-                <h1 class="">medi</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col col-10"></div>
-            <div class="col">
-                <h1 class="">timer</h1>
+                <h1 class="">medi timer</h1>
+                <h5>Willkommen bei Ihrer neuen App, die Ihnen dabei helfen wird Ihre Medikamente rechtzeitig einzunehmen.</h5>
+                <p>Beginnen Sie damit ein Medikament zu erfassen, indem sie auf die Schaltfläche unten klicken.</p>
             </div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
             <div class="col">
-                <a ng-click="goAddMedis()" class="button icon-right ion-chevron-right button-dark">Medis hinzufügen</a>
-            </div>
-        </div>
-                <div class="row">
-            <div class="col">
-                <a ng-click="goMedis()" class="button icon-right ion-chevron-right button-dark">Medi Liste</a>
+                <a ng-click="goAddMedis()" class="button button-block button-balanced">Medikament hinzufügen</a>
             </div>
         </div>
     </ion-content>
