Cover nur wenn local Storage leer

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,6 +25,8 @@ $font-size-small:                 15px !default;
 $royal:                           #886aea !default;
 // $positive:                        black !default;
 $positive:                        #387ef5 !default;
+$balanced:                        #0C7E34 !default;
+// $balanced:                        #33cd5f !default;
 
 //butons
 //**************************************************
