--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,9 @@
 /* Empty. Add your own CSS if you like */
+.centerText, .centerText h5 {
+	text-align: center;
+	color: white;
+}
+
+.centerText h1 {
+color: #0C7E34;
+}
