icons und splashscreens

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -5,7 +5,7 @@
 //diverses
 //****************************************************
 .cover {
-	background: #886aea !important;
+	background: #6620A6 !important;
 	padding: 15px;
 }
 
