--- a/www/templates/cover.html
+++ b/www/templates/cover.html
@@ -7,7 +7,7 @@
             <div class="col centerText">
                 <h1 class="">medi timer</h1>
                 <div class=""><i class="flaticon-medical4"></i></div>&nbsp;
-                <h5>Willkommen bei Ihrer neuen App, die Ihnen dabei helfen wird Ihre Medikamente rechtzeitig einzunehmen.</h5>
+                <h5>Willkommen bei medi timer! medi timer wird Ihnen dabei helfen wird Ihre Medikamente rechtzeitig und vollständig einzunehmen.</h5>
                 <p>Beginnen Sie damit ein Medikament zu erfassen, indem sie auf die Schaltfläche unten klicken.</p>
             </div>
         </div>
