--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,8 +23,8 @@ $font-size-small:                 15px !default;
 //************************************************
 // $royal:                           black !default;
 $royal:                           #886aea !default;
-// $positive:                        black !default;
-$positive:                        #387ef5 !default;
+$positive:                        #6620A6 !default;
+// $positive:                        #387ef5 !default;
 $balanced:                        #0C7E34 !default;
 // $balanced:                        #33cd5f !default;
 
