--- a/www/templates/medi.html
+++ b/www/templates/medi.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Medi Detail">
-    <ion-header-bar align-title="center" class="bar-subheader bar-royal">
+    <ion-header-bar align-title="center" class="bar-subheader bar-balanced">
         <button class="button icon ion-trash-a" ng-click="deleteMedi($stateParams.mediId)"></button>
         <h2 class="title">{{medi.name}}</h2>
         <button class="button icon ion-edit" ng-click="toggleEditing()" ng-show="!editing"></button>
