--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Medi-Timer">
-    <ion-header-bar align-title="left" class="bar-subheader bar-energized">
+    <ion-header-bar align-title="left" class="bar-subheader bar-balanced">
         <h1 class="title">Medikamenten Liste</h1>
             <a class="button icon ion-plus" ng-click="goAddMedi()"></a>
     </ion-header-bar>
