Checkbox checked not working

--- a/www/templates/medi.html
+++ b/www/templates/medi.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Medi Detail">
+<ion-view view-title="Medikamenten Detail">
     <ion-header-bar align-title="center" class="bar-subheader bar-balanced">
         <button class="button icon ion-trash-a" ng-click="deleteMedi($stateParams.mediId)"></button>
         <h2 class="title">{{medi.name}}</h2>
