alle Tage checked

--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -56,43 +56,43 @@
                 </div>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.montag" ng-true-value="'Montag'">
+                        <input type="checkbox" ng-model="medi.timers.tage.montag" ng-true-value="'Montag'" ng-checked="true">
                     </label>
                     Montag
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.dienstag" ng-true-value="'Dienstag'">
+                        <input type="checkbox" ng-model="medi.timers.tage.dienstag" ng-true-value="'Dienstag'" ng-checked="true">
                     </label>
                     Dienstag
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.mittwoch" ng-true-value="'Mittwoch'">
+                        <input type="checkbox" ng-model="medi.timers.tage.mittwoch" ng-true-value="'Mittwoch'" ng-checked="true">
                     </label>
                     Mittwoch
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.donnerstag" ng-true-value="'Donnerstag'">
+                        <input type="checkbox" ng-model="medi.timers.tage.donnerstag" ng-true-value="'Donnerstag'" ng-checked="true">
                     </label>
                     Donnerstag
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.freitag" ng-true-value="'Freitag'">
+                        <input type="checkbox" ng-model="medi.timers.tage.freitag" ng-true-value="'Freitag'" ng-checked="true">
                     </label>
                     Freitag
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.samstag" ng-true-value="'Samstag'">
+                        <input type="checkbox" ng-model="medi.timers.tage.samstag" ng-true-value="'Samstag'" ng-checked="true">
                     </label>
                     Samstag
                 </li>
                 <li class="item item-checkbox">
                     <label class="checkbox">
-                        <input type="checkbox" ng-model="medi.timers.tage.sonntag" ng-true-value="'Sonntag'">
+                        <input type="checkbox" ng-model="medi.timers.tage.sonntag" ng-true-value="'Sonntag'" ng-checked="true">
                     </label>
                     Sonntag
                 </li>
